<resources>
    <string name="app_name">Smilepathway</string>
    <string name="welcome">WELCOME</string>
    <string name="it_s_to_easier_sign_up_now">It’s to easier Sign Up now!</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="back">Back</string>
    <string name="we_just_mobile_number_reset">We just need your registered Mobile Number to send a link to reset your password.</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="i_agree_with">I agree with</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions.]]></string>
    <string name="verify">Verify</string>
    <string name="please_enter_otp">Please enter the OTP received via SMS below for mobile number verification.</string>
    <string name="din_t_got_the_code">Din’t got the code ? </string>
    <string name="resend">RESEND</string>
    <string name="_36_seconds">60 seconds</string>
    <string name="all_property">All PROPERTY</string>
    <string name="news">NEWS</string>
    <string name="home">HOME</string>
    <string name="profile">Profile</string>
    <string name="smile_estimatar">Smile Estimator</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="please_change_your_password">PLEASE CHANGE YOUR PASSWORD</string>
    <string name="please_reset_your_password">PLEASE RESET YOUR PASSWORD</string>
    <string name="roxas_city">Roxas City</string>
    <string name="for_sell">For Transient</string>
    <string name="_4500_000">4500,000</string>
    <string name="featured">Featured</string>
    <string name="marto_novo_apartemet">Marto Novo Apartemet</string>
    <string name="_2456e_star_road_new_york">2456E, Star Road, New York</string>
    <string name="ac">AC</string>
    <string name="maxline">4</string>
    <string name="maxlineagent">2</string>
    <string name="tv">TV</string>
    <string name="parking">Parking</string>
    <string name="wifi">Wifi</string>
    <string name="refrigerator">Refrigerator</string>
    <string name="hairdryer">Hair Dryer</string>
    <string name="dvdplayer">DVD Player</string>
    <string name="food">Food</string>
    <string name="lorem_text">Lorem ipsum dolor sit amet, consectetuer adipisc elit, sed diam nonummy</string>
    <string name="lorem_txt">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy...</string>
    <string name="_25_aug_2019_10_15_pm">25 Aug 2019 | 10:15 PM</string>
    <string name="asmith_salto">Asmith Salto</string>
    <string name="ashmit_gmail_com">ashmit@gmail.com</string>
    <string name="persional_info">personal info</string>
    <string name="_022_0123456789">022 0123456789</string>
    <string name="email">Email</string>
    <string name="username">User ID</string>
    <string name="user_name">User Name</string>
    <string name="username_emai">User ID/Email ID</string>
    <string name="see_favorite_properties">See Favorite Properties</string>
    <string name="you_can_edit_your_personal_details">You can edit your personal details</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="faq">FAQ</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="current_password">Current Password</string>
    <string name="featured_properties">Featured Properties</string>
    <string name="see_all">See All</string>
    <string name="popular_agents">Popular Agents</string>
    <string name="dotcom_property_sale">Dotcom Property Sale</string>
    <string name="_21_1234567890">+21 1234567890</string>
    <string name="contact_information">Contact information</string>
    <string name="address">Address</string>
    <string name="ring_circle">HomePad 137 Malakas St. 100 Acre Building, Barangay Central , Quezon City,Philippines</string>
    <string name="phone">Phone</string>
    <string name="_63_0123456789_63_0123456789">+639285046969</string>
    <string name="support_homepage_com">homepad.ceo@gmail.com</string>
    <string name="send_message">Send Message</string>
    <string name="message">Message</string>
    <string name="send">Send Now !</string>
    <string name="lorem_texts">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper cipit lobortis nisl ut aliquip ex ea commodo consequat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper cipit lobortis nisl ut aliquip ex ea commodo cipit lobortis nislconsequat.   Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper cipit lobortis nisl ut aliquip ex ea commodo consequat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper cipit lobortis nisl ut aliquip ex ea commodo cipit lobortis nislconsequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper cipit lobortis nisl ut aliquip ex ea commodo consequat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper cipit lobortis nisl ut aliquip ex ea commodo cipit lobortis nislconsequat.    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</string>
    <string name="apartment">Apartment</string>
    <string name="ring_location">F456, Ring Circle, Jinkoy School, Star Road, New York - 45464E</string>
    <string name="description">Description</string>
    <string name="lorem_tx">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper cipit lobortis nisl ut aliquip ex ea commodo consequat.</string>
    <string name="amenities">Amenities facilities</string>
    <string name="sendenquiry">Send Enquiry</string>
    <string name="sendd">Send</string>
    <string name="favorite">Favorite</string>
    <string name="_15">15</string>
    <string name="properties">Properties</string>
    <string name="fillter">Filter</string>
    <string name="search">Search</string>
    <string name="reset">Reset</string>
    <string name="price_range">Price Range</string>
    <string name="facilities">Facilities</string>
    <string name="property_type">PROPERTY TYPE</string>
    <string name="location">LOCATION</string>
    <string name="radius">RADIUS</string>
    <string name="apply">Apply</string>
    <string name="agent_info">Agent Info</string>
    <string name="_1324235678">1324235678</string>
    <string name="no_internet_connection">Please check internet connection.</string>
    <string name="internet_connection_msg">Make sure your device is connected to the internet.</string>
    <string name="enter_name_id_msg">Enter your user id.</string>
    <string name="enter_name_msg">Enter your name.</string>
    <string name="enter_name_msg_enquiry">Enter your message.</string>
    <string name="enter_name_valid_msg">Enter a valid name.</string>
    <string name="enter_mobilenumber_msg">Enter mobile number.</string>
    <string name="enter_emailaddress_msg">Enter email address.</string>
    <string name="enter_dob_msg">Enter your date of birth.</string>
    <string name="enter_gender_msg">Please select gender.</string>
    <string name="enter_valid_email_msg">Enter a valid email address.</string>
    <string name="enter_password_msg">Enter password.</string>
    <string name="enter_min_length_passeord_msg">Password must have at least min 8 characters.</string>
    <string name="enter_min_phone">Mobile number must have at least min 7 characters.</string>
    <string name="accept_terms_condition">Please accept terms &amp; conditions.</string>
    <string name="enter_old_password_msg">Enter current password.</string>
    <string name="enter_new_password_msg">Enter new password.</string>
    <string name="enter_confirm_pass_msg">Enter confirm password.</string>
    <string name="password_not_match">Password and confirm password do not match.</string>
    <string name="please_select_valid_image_file">Please select valid image file.</string>
    <string name="otpvalueblank">Enter otp</string>
    <string name="valid_otp">Enter valid otp</string>
    <string name="selectcountry">Select country code.</string>
    <string name="passwordgretheneight">The password must be at least 8 characters.</string>
    <string name="passwordblank">Enter password.</string>
    <string name="confirmpasswordblank">Enter confirm password.</string>
    <string name="bothpasswordshoubsame">New Password and Confirm Password does not match.</string>
    <string name="oldpassgretheneight">Current password should be of minimum 8 characters."</string>
    <string name="newpassgretheneight">New Password should be of minimum 8 characters."</string>
    <string name="confirmpassgrethneight">Confirm password should be minimum 8 characters.</string>
    <string name="oldpasswordblank">Please enter current password.</string>
    <string name="newpasswordblank">Please enter new password.</string>
    <string name="enter_message">Please enter message.</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="camera">Camera</string>
    <string name="choose_option">Choose Option</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="log_in">Log In</string>
    <string name="smilePathway">Smile Pathway</string>
    <string name="createAccount"><ul>Create Account ?</ul></string>
    <string name="need_help">Need Help ?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="verification">Verification</string>
    <string name="dashboard">Dashboard</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="martin_garrix">Martin Garrix</string>
    <string name="appointment">Appointment</string>
    <string name="smile_appo">Smile Appointer</string>
    <string name="treatment_plan">Smile Plan</string>
    <string name="treatment_list">Treatment List</string>
    <string name="change_password">Change Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="log_out">Log Out</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="email_id">Email Id</string>
    <string name="age">Age</string>
    <string name="dob">DOB</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="last_month">Last Month</string>
    <string name="last_three_month">Last Three Month</string>
    <string name="female">Female</string>
    <string name="ather">Other</string>
    <string name="email_small">email</string>
    <string name="forgot_password_new">Forgot Password?</string>
    <string name="clinic_name">Clinic Name</string>
    <string name="app_list">Appointment List</string>
    <string name="notification">Notification</string>
</resources>