<LinearLayout android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="@dimen/sixteen_dp"
        android:text="@string/choose_option" />

    <View
        android:background="@color/primaryBorderColor"
        android:layout_height="1dp"
        android:layout_width="match_parent" />

    <TextView
        android:gravity="center"
        android:id="@+id/tv_takeimg"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="@dimen/sixteen_dp"
        android:text="@string/camera"
        android:textColor="@color/black"
        android:textSize="16dp" />

    <View
        android:background="@color/primaryBorderColor"
        android:layout_height="1dp"
        android:layout_width="match_parent" />

    <TextView
        android:gravity="center"
        android:id="@+id/tv_takecameraroll"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="@dimen/sixteen_dp"
        android:text="@string/gallery"
        android:textColor="@color/black"
        android:textSize="16dp" />

    <View
        android:background="@color/primaryBorderColor"
        android:layout_height="1dp"
        android:layout_width="match_parent" />

    <TextView
        android:gravity="center"
        android:id="@+id/tv_cancel"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="@dimen/sixteen_dp"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="16dp" />
</LinearLayout>