<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@mipmap/login_bg"
        app:layout_constraintHeight_percent="0.65"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent" />


    <TextView
        android:id="@+id/tvLoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/log_in"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.19"
        app:layout_constraintTop_toBottomOf="@id/tvLoginText" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@mipmap/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topGuideline" />


    <TextView
        android:id="@+id/tvHeaderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/smilePathway"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.82"
        app:layout_constraintRight_toRightOf="parent" />


    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/border_box"
        android:hint="@string/username_emai"
        android:text=""
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#808284"
        android:textColorHint="#808284"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
        app:layout_constraintRight_toRightOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/tvHeaderTitle" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeftNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRightNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.70"
        app:layout_constraintRight_toRightOf="parent" />


    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/border_box"
        android:hint="@string/password"
        android:text=""
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#808284"
        android:textColorHint="#808284"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
        app:layout_constraintRight_toRightOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65"
        app:layout_constraintTop_toBottomOf="@id/tvLoginText" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_button"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/endGuideline"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeftNew"
        app:layout_constraintRight_toRightOf="@+id/guidelineRightNew"
        app:layout_constraintTop_toTopOf="@+id/endGuideline" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/forgot_password_new"
        android:textColor="#574B57"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeftNew"
        app:layout_constraintRight_toRightOf="@+id/guidelineRightNew"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />


    <View
        android:id="@+id/viewOrLeft"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:visibility="gone"
        android:background="#839B9F"
        app:layout_constraintBottom_toBottomOf="@+id/tvOr"
        app:layout_constraintLeft_toLeftOf="@+id/tvForgotPassword"
        app:layout_constraintRight_toLeftOf="@+id/tvOr"
        app:layout_constraintTop_toTopOf="@+id/tvOr" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="2dp"
        android:gravity="center"
        android:visibility="gone"
        android:text="or"
        android:textColor="#574B57"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/viewOrLeft"
        app:layout_constraintRight_toLeftOf="@+id/viewOrRight"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />

    <View
        android:id="@+id/viewOrRight"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginRight="10dp"
        android:background="#839B9F"
        app:layout_constraintBottom_toBottomOf="@+id/tvOr"
        app:layout_constraintLeft_toRightOf="@+id/tvOr"
        app:layout_constraintRight_toRightOf="@+id/tvForgotPassword"
        app:layout_constraintTop_toTopOf="@+id/tvOr" />


    <ImageView
        android:id="@+id/ivFacebook"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:src="@mipmap/facebook"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeftNew"
        app:layout_constraintRight_toLeftOf="@+id/ivGoogle"
        app:layout_constraintTop_toBottomOf="@+id/tvOr" />


    <ImageView
        android:id="@+id/ivGoogle"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:visibility="gone"
        android:src="@mipmap/google"
        app:layout_constraintLeft_toRightOf="@+id/ivFacebook"
        app:layout_constraintRight_toRightOf="@id/guidelineRightNew"
        app:layout_constraintTop_toBottomOf="@+id/tvOr" />


    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:visibility="gone"
        android:text="@string/createAccount"
        android:textColor="#EF936E"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />


    <TextView
        android:id="@+id/tvNeedHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:text="@string/need_help"
        android:textColor="#839B9F"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>